test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-borrowed.good
init-field-dflt-nonnil-borrowed-from-oknil-borrowed.chpl:8: error: cannot initialize field MyRecord.lhs of non-nilable type 'borrowed MyClass' from a nilable 'borrowed MyClass?'
